--- a/react-portfolio/src/components/header/header.css
+++ b/react-portfolio/src/components/header/header.css
@@ -1,48 +1,38 @@
 header {
-    height: 100vh;
-    padding-top: 7rem;
-    overflow: hidden;
-}
-
-.header__container {
-    text-align: center;
-    height: 100%;
-    position: relative;
-}
-
-.header__socials {
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+
+}
+
+.container {
+    display: flex;
+}
+
+
+.header_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 0.8rem;
-    position: absolute;
-    left: 0;
-    bottom: 3rem;
+    width: 100%;
+    height: 50%;
 }
 
-.header__socials::after {
-    content: "";
-    width: 1px;
-    height: 2rem;
-    background: var(--color-primary);
+.btn-header {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-/*   ME   */
+.btn-header a {
+    padding: 5% 10%;
+    border-radius: 20px;
+    border: solid 1px #2980FF;
+    text-decoration: none;
 
-/*   media queries (medium devices)   */
-@media screen and (max-width: 1024px) {
-    header {
-        height: 68vh;
-    }
-}
-
-/*   media queries (snall devices)   */
-@media screen and (max-width: 600px) {
-    header {
-        height: 100vh;
-    }
-
-    .header__socials {
-        display: none;
-    }
 }
