--- a/react-portfolio/src/components/header/header.css
+++ b/react-portfolio/src/components/header/header.css
@@ -1,9 +1,22 @@
 header {
     display: flex;
+    margin: auto;
     flex-direction: column;
     height: 100vh;
     width: 100vw;
+    background-color: #202020;
+}
 
+h1 {
+    color: var(--white);
+    font-size: 2.5em;
+    font-weight: 300;
+}
+
+header h3 {
+    color: var(--white);
+    font-size: 1.5em;
+    font-weight: 200;
 }
 
 .container {
@@ -24,15 +37,17 @@ header {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 50%;
+    height: 25%;
     justify-content: space-evenly;
     align-items: center;
 }
 
 .btn-header a {
-    padding: 5% 10%;
+    padding: 4% 12%;
     border-radius: 20px;
     border: solid 1px #2980FF;
     text-decoration: none;
-
+    color: var(--white);
+    font-size: 1.2em;
+    font-weight: 100;
 }
