--- a/react-portfolio/src/index.css
+++ b/react-portfolio/src/index.css
@@ -1,13 +1,23 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+  font-family: 'Montserrat', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*code {
+}*/
+
+:root {
+  --white: #FFFFFF;
+  --secondary: #2980FF;
+  --black: #202020;
+  --average-gray: #806565;
+  --light-gray: #E2E2E2;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  margin: auto;
 }
